# CommitLens

./: .gitignore  Makefile  README.md  codex.sb  debug_curves.py  debug_edges.py  debug_final.py  debug_render_path.py  diagnose_data.py  final_fix_curves.py  force_curves.py  isolated_task_executor.py  patch_data.py  pyproject.toml  setup_codex_env.sh  solution_branch_connections.py  test_api_key.py  test_append_mode.py  test_auto_follow_optimization.py  test_codex_gui.py  test_continuous_scroll.py  test_curves_final.py  test_custom_workspace.py  test_direct_curves.py  test_final_ui.py  test_freeze_mode.py  test_gui_curves.py  test_import.py  test_integrated.py  test_isolated.py  test_merged_features.py  test_parsing_fix.py  test_path_render.py  test_render.py  test_status_icons.py  test_svg_render.py  test_task_executor.py  test_timestamp_format.py  verify_integration.py
.cache/: codex_prompt.txt  gui_settings.json  latex_fix_prompt.txt  latex_fix_shards_prompt.txt  puml_fix_prompt.txt  tex_fix_prompt.txt  计算几何教材-01.md  计算几何教材.md
.test_append_mode/: codex_error.txt  codex_output.txt
.test_auto_follow/: codex_output.txt
.test_codex_output/: codex_error.txt  codex_output.txt
.test_continuous_scroll/: codex_output.txt
.test_final/: codex_output.txt
.test_freeze_mode/: codex_output.txt
.test_parsing/: codex_output.txt
.test_timestamp/: codex_output.txt
.workspace/: codex_error.txt  task_status.json
docs/: api_error_detection_fix.md  gpt5_codex_high_model.md  message_click_jump_implementation.md  message_list_streaming_fix.md  stop_button_crash_fix.md  (+8 more)
(+88 files in other folders)
