[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commitlens"
version = "0.1.0"
description = "CommitLens · Codex-powered, one-stop commit report generator (timeline sboxes + Codex + PUML + LaTeX)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Sboxgen Team", email = "devnull@example.com"}]
license = {text = "Proprietary"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.scripts]
commitlens = "sboxgen.cli:main"
sboxgen = "sboxgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sboxgen*"]
